base rule added

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
   <div class="main">
     <div class="container">
-        <div class="firstPlayer">
+        <div class="firstPlayer currentPlayer">
             <h3>player1</h3>
-            <div class="currentPoint">0</div>
-            <div class="totalPoints">0</div>
+            <div class="currentPoint" id="currentOne">0</div>
+            <div class="totalPoints" id="totalOne">0</div>
         </div>
         <div class="secondPlayer">
             <h3>player2</h3>
