--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
   <div class="main">
     <div class="container">
-        <div class="firstPlayer currentPlayer">
-            <h3>player1</h3>
-            <div class="currentPoint" id="currentOne">0</div>
-            <div class="totalPoints" id="totalOne">0</div>
+        <div class="player-0 currentPlayer">
+            <h3 id="playerName0">player1</h3>
+            <div class="currentPoint" id="current0">0</div>
+            <div class="totalPoints" id="total0">0</div>
         </div>
-        <div class="secondPlayer">
-            <h3>player2</h3>
-            <div class="currentPoint">0</div>
-            <div class="totalPoints">0</div>
+        <div class="player-1">
+            <h3 id="playerName1">player2</h3>
+            <div class="currentPoint" id="current1">0</div>
+            <div class="totalPoints" id="total1">0</div>
         </div>
         <button id="start">Start</button>
         <button id="dice">dice</button>
